--- a/_posts/2019-06-29-the-us-narrative-today.html
+++ b/_posts/2019-06-29-the-us-narrative-today.html
@@ -2640,107 +2640,107 @@ stories:
   domain: http://www.cullmantimes.com/
   link: https://www.cullmantimes.com/donnie-and-melanie-chance/image_225f6280-9a02-11e9-a31f-bf39d774b202.html
 images:
-- name: downtown-fredericksburg-downtown-fredericksburg-kandinsky-bv.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-kandinsky-bv.JPG
-- name: yosemite-yosemite-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crabapple.jpg
-- name: oldhousecars-house-old-cars-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-ww2-color.jpg
-- name: birdhouse-birdhouse-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-green-zuma.jpg
-- name: old-gas-pumps-oldgaspumps-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-monet-one.jpg
-- name: beach-rocks-beach-rocks-currents-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dali-three.jpg
-- name: oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
-- name: border-fence-border-fence-on-hill-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-emily-carr.jpg
-- name: razorcliff-razorcliff-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-yellow-collage.jpg
-- name: bordercrossing-bordercrossing-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-purple-storm.jpg
-- name: power-lines-power-lines-empty-space-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-light-dali.jpg
-- name: oldcabin-oldcabin-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-atari-missle.jpg
-- name: oldhouse-oldhouse-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-copper-circuit.jpg
-- name: school-clouds-church-clouds-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-cinnamon-rolls.jpg
-- name: store-on-corner-oldcabin-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-electricity.jpg
-- name: nyc-flag-nycflag-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-graham-sutherland.jpg
-- name: old-granary-field-granaryfield-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dry-skin.jpg
+- name: oldhotel-oldhotel-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-marcel-duchamp.jpg
+- name: old-granary-field-oldhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-light-dali.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-aqua.jpg
+- name: oldsmallboat-oldsmallboat-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-dali.jpg
+- name: crow_colorful_dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_dream.jpg
+- name: crow_kandinsky_bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_kandinsky_bv.jpg
+- name: carry-load-carryload-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-mucha-mult.jpg
+- name: oldroad-old-road-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-smoking-cigarette.jpg
+- name: old-gas-pumps-oldgaspumps-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-internet-numbers.jpg
+- name: wind-mills-windmills-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-mucha-mult.jpg
+- name: cannon-facing-cannon-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-copper-circuit.jpg
+- name: aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
+- name: aws-s3-stories-35910978054-906047b6cb-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-35910978054-906047b6cb-z.jpg
+- name: nyc-flag-nycflag-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-alien-goggles.jpg
+- name: 35562068104_fa20c57575-wreck.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-wreck.jpg
+- name: window-window-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-sunday.jpg
+- name: legal-statue-legalstatue-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-nazi-poster.jpg
+- name: downtown-los-angeles-downtown-la-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-copper-circuit.JPG
+- name: eduardo-eduardo-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-rainbow-festival.jpg
+- name: adam-smith-adam-smith-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-nazi-poster.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-copper-circuit-2.jpg
+- name: gypsy-wagon-gypsywagon-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-diego-rivera1.jpg
+- name: abandonedbuildings_colorful_blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_colorful_blocks.jpg
+- name: blossombar-bright-sand-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-bright-sand-file-00-00-50-62.jpg
+- name: containership-containership-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dry-skin.jpg
+- name: old-barn-old-barn-1500-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-nazi-poster.jpg
+- name: adam-smith-adam-smith-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit.jpg
+- name: berlinwall2-berlinwall-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-alberto-giacometti.jpg
+- name: fence-fence-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dali-three.jpg
+- name: blossombar-really-hot-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-really-hot-file-00-00-50-62.jpg
 - name: pigeons-on-the-ledge-pigeons-on-ledge-post-modern.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-post-modern.jpg
-- name: server-cloud-server-racks-door-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit-2.jpg
-- name: carry-load-carryload-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-wols.jpg
-- name: razorwire-DSC-0080-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-purple-pond.jpg
-- name: aws-s3-stories-power-lines-empty-space-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-power-lines-empty-space-sunday.jpg
-- name: capital-battle-capitolbattle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle.jpg
-- name: scream-IMG_8313.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8313.jpg
-- name: hollywood-building-hollywood-building-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-rainbow-festival.jpg
-- name: death-valley-death-valley-national-park-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-satan-red.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
-- name: eduardo-eduardo-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-constitution.jpg
-- name: scream-IMG_7936.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7936.jpg
-- name: oldcabin-oldcabin-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-sand-paper.jpg
-- name: old-cabin-oldcabin-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-atari-asteroids.jpg
-- name: old-barn-old-barn-1500-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crunch-paper.jpg
-- name: berlinwall2-berlinwall-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-kand-two.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-spagetti-accident.jpg
-- name: containership-containership-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-kandinsky-bv.jpg
-- name: copper-circuit-DSC_0088.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0088.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-gan-vogh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-gan-vogh.JPG
-- name: school-clouds-church-clouds-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-aqua.jpg
-- name: locked-up-steam-lock-up-steam-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-rainbow-festival.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-yellow-collage.jpg
-- name: statue-of-liberty-front-view-statueofliberty-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-kand-two.jpg
-- name: abandonedbuildings_blue_circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_circuit.jpg
-- name: crow_light_dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_light_dali.jpg
-- name: oldcabin-store.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store.jpg
-- name: aws-s3-stories-oldgaspumps-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-oldgaspumps-umberto-bocc.jpg
-- name: status-berlin-status-berlin-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-atari-asteroids.jpg
-- name: liberty-back-statue-liberty-back-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-creativity.jpg
-- name: oldcabin-oldcabin-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-brush.jpg
-- name: gypsymosaic-gypsy-eyes-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colored-circuits.jpg
-- name: gears-4882162452-fa3126b38d-b-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-monet-one.jpg
-- name: gypsymosaic-gypsy-eyes-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-light-dali.jpg
+- name: machine-road-machine-road-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-sunday.jpg
+- name: nazi-invasion-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8494.jpg
+- name: stories-new-79-110-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-79-110-800-500-0-max-0--5--1.jpg
+- name: sand-hand-sand-hand-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-marcel-duchamp.jpg
+- name: bluelake-cinnamon-rolls-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-cinnamon-rolls-file-00-01-17-38.jpg
+- name: gears-4882162452-fa3126b38d-b-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-green-zuma.jpg
+- name: hollywood-building-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-jap-wav-pr.jpg
+- name: eduardo-eduardo-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-light-dali.jpg
+- name: old-school-house-old-schoolhouse-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-mucha-mult.jpg
+- name: hollywood-building-hollywood-building-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-matrix.jpg
+- name: miamibeach-miamibeach-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crafty-painting.jpg
+- name: ellis-island-ellis-island-room-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-brush.jpg
+- name: aws-s3-stories-new-16-77-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-16-77-800-500-0-max-0-1--1.jpg
+- name: dragon-desert-desert-dragon-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-green-zuma.jpg
+- name: power-lines-power-lines-empty-space-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-plentiful.jpg
+- name: mediterranean-mediterranean-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-circuit.jpg
+- name: flower-barbed-wire-flower-barbed-wire-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-post-modern.jpg
+- name: crow-crow-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-crafty-painting.jpg
+- name: oldhouse-oldhouse-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-attack-planes.jpg
+- name: school-clouds-church-clouds-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-china-prop.jpg
 ---
 Tens Of Thousands Join Gay Pride Parades Around The World.&nbsp;The Creature Teacher Entertains During The Summer Reading Program.&nbsp;Credit Card Issue At Steamboat Business Sparks Concerns Of Fraud.&nbsp;US, Canadian Safety Officials Looking Into Train Derailment.&nbsp;Students, Teachers Honored At Chamber Education Banquet.&nbsp;Nathalie Emmanuel Fears She Underwhelms People.&nbsp;Zabiegi Na Cellulit Wojkowice.&nbsp;Conversation With Christopher White.&nbsp;
